crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__keymap_short.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
MOVING                          LOOKING                         CHANGING                        DOING                                                           
j/k  ↓/↑     select a row       h  ?         this keymap        any char     types into a box   x            stop                                               
g/G home/end first / last       b            feed, full screen  ⌫ ↵ esc      erase, file, drop  R            restart                                            
J/K          next / prev sheep  F            gather by fold     e            the config pane    L            reload                                             
ctrl-d/u     page the feed      z            collapse a fold    space        cycle a value                                                                      
←/→          environment tab    o            out / err / both   d            restore default                                                                    
tab/S-tab    next / prev group  m            minimum level      u            undo the edit                                                                      
1-9          jump to a group    f            follow the tail    s            shepherd settings                                                                  
n/N          next / prev match  w            wrap long lines    S            secrets                                                                            
↵            open selection     /            filter, or match   D            delete a secret                                                                    
esc          back one level     r            refresh now        c            leave it running                                                                   
                                v            reveal for 10s                                                                                                     
                                y            copy the value                                                                                                     
                                                                                                                                                                
 the three above each arm a confirm  ·  ↵ confirms  ·  10s to answer  ·  █ control enabled                                                                      
 h or ?  closes this  ·  q  ctrl-c  quits lookout
